feat: ✨ 添加文档、.vscode，删除无用文件

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-temlate-router-ts-redux-less-commitlint",
+  "name": "react-temlate-basic",
   "private": true,
   "version": "0.0.0",
   "type": "module",
